--- a/Style.css
+++ b/Style.css
@@ -1,8 +1,12 @@
 .pokedex {
+    display: inline-block;
+    position: relative;
     max-width: 100%;
     max-height: 100%;
 }
 .pokemon {
+    display: inline-block;
+    position: relative;
     max-width: 100%;
     max-height: 100%;
     
@@ -15,6 +19,10 @@
     top: -1%;
     
 }
-img {
+.nome {
     position: absolute;
+    font-size: 30px;
+    left: 22.2%;
+    top: 13.2%;
+    font-style: ;
 }
