--- a/Style.css
+++ b/Style.css
@@ -1,23 +1,66 @@
-
 body {
-    
+
     background-image: url(https://get.wallhere.com/photo/1920x1200-px-nature-pokemon-1004643.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: 40%;
     width: 99vw;
     height: 98vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-    display:flex;
+}
+
+.base {
+    transform: rotate(180deg);
+}
+
+.dex {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.base{
-    transform: rotate(180deg); 
+
+#abrirDex {
+    position: absolute;
+    align-items: center;
+    font-size: 200px;
+    margin: 0px;
+    padding: 0px;
+    opacity: 0;
+
 }
-main{
-    background-color: black;
-    width: 1000px;
-    height: 1000px;
+
+#fundo {
+    position: relative;
+    padding: 0;
+    margin: 0;
+    background: rgb(113, 255, 249);
+    background: linear-gradient(180deg, rgba(113, 255, 249, 1) 0%, rgba(113, 255, 249, 0.5469538157059699) 50%, rgba(113, 255, 249, 1) 100%);
+    width: 600px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+#pokemon {
+    display: none;
+    width: 100px;
+    margin-left: 13%;
+    margin-right: auto;
+    margin-top: 10%;
+}
+
+@keyframes changeSizeBackground {
+    0% {
+        height: 0px;
+    }
+
+    100% {
+        height: 260px;
+    }
 }
