--- a/Style.css
+++ b/Style.css
@@ -40,7 +40,11 @@ body {
     margin: 0;
     background: rgb(113, 255, 249);
     background: linear-gradient(180deg, rgba(113, 255, 249, 1) 0%, rgba(113, 255, 249, 0.5469538157059699) 50%, rgba(113, 255, 249, 1) 100%);
-    width: 600px;
+    border-left:5px groove;
+    border-left: linear-gradient(180deg, rgba(33,34,34,0.9) 0%, rgba(33,34,34,0.7010154403558299) 50%, rgba(33,34,34,0.9) 100%);
+    border-right:5px ridge;
+    border-right: linear-gradient(180deg, rgba(33,34,34,0.9) 0%, rgba(33,34,34,0.7010154403558299) 50%, rgba(33,34,34,0.9) 100%);
+    width: 580px;
     align-items: center;
     flex-direction: column;
     justify-content: center;
