--- a/Style.css
+++ b/Style.css
@@ -36,28 +36,41 @@ body {
 
 #fundo {
     position: relative;
+    display: flex;
     padding: 0;
     margin: 0;
-    background: rgb(113, 255, 249);
     background: linear-gradient(180deg, rgba(113, 255, 249, 1) 0%, rgba(113, 255, 249, 0.5469538157059699) 50%, rgba(113, 255, 249, 1) 100%);
-    border-left:5px groove;
-    border-left: linear-gradient(180deg, rgba(33,34,34,0.9) 0%, rgba(33,34,34,0.7010154403558299) 50%, rgba(33,34,34,0.9) 100%);
-    border-right:5px ridge;
-    border-right: linear-gradient(180deg, rgba(33,34,34,0.9) 0%, rgba(33,34,34,0.7010154403558299) 50%, rgba(33,34,34,0.9) 100%);
+    border-left: 5px groove;
+    border-right: 5px ridge;
     width: 580px;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-
 }
 
 #pokemon {
     display: none;
-    width: 100px;
-    margin-left: 13%;
-    margin-right: auto;
-    margin-top: 10%;
+    text-align: center;
+    width: 30%;
 }
+
+#pokemon img {
+    width: 75%;
+}
+
+#texto {
+    width: 70%;
+    float: left;
+    align-items: right;
+}
+.nome {
+    align-items: right;
+    
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 25px;
+    background-color: aliceblue;
+}
+
 
 @keyframes changeSizeBackground {
     0% {
@@ -66,5 +79,13 @@ body {
 
     100% {
         height: 260px;
+    }
+}
+@keyframes aparecePoke {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
