--- a/Style.css
+++ b/Style.css
@@ -24,6 +24,32 @@ body {
     align-items: center;
 }
 
+#setaE {
+    display: block;
+    position: absolute;
+    padding: 20px;
+    box-shadow: 4px -4px 0 1px rgba(0, 115, 150, 0.651) inset;
+    border: solid transparent;
+    border-width: 0 0 2px 2px;
+    background-color: transparent;
+    transform: rotate(45deg);
+    margin-top: 23%;
+    margin-left: 37%;
+}
+
+#setaD {
+    display: block;
+    position: absolute;
+    padding: 20px;
+    box-shadow: 4px -4px 0 1px rgba(0, 115, 150, 0.651) inset;
+    border: solid transparent;
+    border-width: 0 0 2px 2px;
+    background-color: transparent;
+    transform: rotate(225deg);
+    margin-top: 23%;
+    margin-left: 58%;
+}
+
 #abrirDex {
     position: absolute;
     align-items: center;
@@ -64,14 +90,15 @@ body {
     float: left;
     align-items: right;
     text-align: right;
-    padding-bottom: 120px;
-    padding-right:30px ;
+    padding-bottom: 160px;
+    padding-right: 30px;
 }
+
 .nome {
     align-items: right;
+    box-shadow: 7px 7px 0 0 rgba(27, 27, 27, 0.664);
+    border: solid rgba(9, 123, 138, 0.658);
     padding: 0px 10px;
-    border: solid black;
-    border-radius: 50px;
     font-family: monospace;
     font-size: 25px;
     background-color: aliceblue;
@@ -87,10 +114,12 @@ body {
         height: 260px;
     }
 }
+
 @keyframes aparecePoke {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
