--- a/Style.css
+++ b/Style.css
@@ -106,6 +106,11 @@ body {
     font-size: 25px;
     background-color: aliceblue;
 }
+.descricao {
+    position: absolute;
+    display: block;
+    
+}
 
 
 @keyframes changeSizeBackground {
